crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_all_variant_types_snapshot@integer_enum_all_variant_types_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 257
expression: rendered
---
export const workflowRuns = pgTable("workflow_runs", {
  id: integer("id").primaryKey(),
  state: integer("state").notNull(),
});
