crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_all_variant_types_snapshot@integer_enum_all_variant_types_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const workflowRuns = pgTable("workflow_runs", {
  id: integer("id").primaryKey(),
  state: integer("state").notNull(),
});
