crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_all_variant_types_snapshot@integer_enum_all_variant_types_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type EdgeState int

const (
	EdgeStateUnknown    EdgeState = -1
	EdgeStateNotStarted EdgeState = 0
	EdgeStateInProgress EdgeState = 10
	EdgeStateHTTP500    EdgeState = 500
)

type WorkflowRuns struct {
	ID    int32     `gorm:"column:id;primaryKey" json:"id"`
	State EdgeState `gorm:"column:state;not null" json:"state"`
}

func (WorkflowRuns) TableName() string { return "workflow_runs" }
