crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_all_variant_types_snapshot@integer_enum_all_variant_types_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
enum EdgeState {
  UNKNOWN // = -1
  NOT_STARTED // = 0
  IN_PROGRESS // = 10
  HTTP_500 // = 500
}

model WorkflowRuns {
  id Int @id
  state EdgeState

  @@map("workflow_runs")
}
