crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_with_default_snapshot@integer_enum_with_default_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 267
expression: rendered
---
export const tasks = pgTable("tasks", {
  id: integer("id").notNull(),
  status: integer("status").notNull().default(1),
});
