crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_with_default_snapshot@integer_enum_with_default_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type TaskStatus int

const (
	TaskStatusPending   TaskStatus = 0
	TaskStatusCompleted TaskStatus = 100
)

type Tasks struct {
	ID     int32      `gorm:"column:id;not null" json:"id"`
	Status TaskStatus `gorm:"column:status;not null;default:1" json:"status"`
}

func (Tasks) TableName() string { return "tasks" }
